--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-yandex-maps": "^4.6.0",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.0",
     "typescript": "^4.5.2",
